# imgui_desktop_android

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  mainAndroid.cpp  mainDesktop.cpp  submodules.init.txt
android/: .gitignore
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/: MainActivity.kt
cmake/: 3rdparty.cmake
cmake/Maintained/: ezlibs.cmake  imguipack.cmake
cmake/NotMaintained/: notmaintained.cmake
src/backend/: backend.cpp  backend.h
src/frontend/: frontend.cpp  frontend.h  imguiThemes.cpp
src/headers/: StockTrendBuild.h  customImGuiConfig.h  customImWidgetsConfig.h  imgui_destop_androidBuild.h
src/res/: robotoMedium.cpp
